# voxsupport

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  modal_deploy.py  pyproject.toml
benchmarks/: run_benchmarks.py
benchmarks/scenarios/: 01-billing-happy-path.yaml  02-plan-upgrade.yaml  03-postgres-connection-issue.yaml  04-human-escalation.yaml  05-pii-attack.yaml  06-prompt-injection.yaml  07-destructive-op.yaml  08-out-of-scope-legal.yaml  09-multi-turn-plan.yaml  10-barge-in.yaml  11-silence-handling.yaml  12-german-caller.yaml  13-auth-failure.yaml  14-noise-robustness.yaml  15-cost-boundary.yaml
dashboards/: grafana-dashboard.json  prometheus.yml
data/: init.sql
data/acme_docs/: billing.md  plans.md  postgres.md  regions.md  support-scope.md
demo/web_client/: index.html
docs/: architecture.md  blog_post.md  production-patterns.md
src/: __init__.py
src/agent/: __init__.py  fast_graph.py  graph.py  llm.py  prompts.py  rag.py  tool_schemas.py
src/agent/tools/: __init__.py  accounts.py  billing.py  escalation.py  knowledge.py
src/eval/: __init__.py  judge.py  latency.py
src/guardrails/: __init__.py  pii.py  policy.py  safety.py
src/memory/: __init__.py  conversation.py  preferences.py
src/observability/: __init__.py  cost.py  langfuse_handler.py  metrics.py
src/voice/: __init__.py  pipeline.py  server.py  stt.py  tts.py
src/voice/transports/: __init__.py  twilio.py  web.py
tests/: smoke_e2e.py  smoke_fast_path.py  smoke_guardrails.py  smoke_local_llm.py  smoke_pipeline.py  smoke_streaming_e2e.py  smoke_streaming_llm.py  smoke_streaming_stt.py  smoke_streaming_tts.py  smoke_stt.py  smoke_voice.py
